--- a/ImgPostEffects/Base.lproj/Main.storyboard
+++ b/ImgPostEffects/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G17023" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G19009" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -87,32 +87,38 @@
                     <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
+                        <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="2" translatesAutoresizingMaskIntoConstraints="NO" id="PSE-Xr-vbQ">
+                            <rect key="frame" x="-2" y="10" width="244" height="31"/>
+                            <connections>
+                                <action selector="onSliderChanged:" destination="7Hx-zg-djq" eventType="valueChanged" id="vTh-Bb-6zK"/>
+                            </connections>
+                        </slider>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="TFP-7E-ncG">
-                            <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                            <rect key="frame" x="0.0" y="40" width="240" height="88"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CBH-Hk-hMN" userLabel="Birghtness">
-                                    <rect key="frame" x="0.0" y="0.0" width="60" height="128"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="60" height="88"/>
                                     <state key="normal" title="Birhgtness"/>
                                     <connections>
                                         <action selector="onBrightnessChanged:" destination="7Hx-zg-djq" eventType="touchUpInside" id="wb2-uA-5Gt"/>
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o4o-ZC-yQH">
-                                    <rect key="frame" x="60" y="0.0" width="60" height="128"/>
+                                    <rect key="frame" x="60" y="0.0" width="60" height="88"/>
                                     <state key="normal" title="Saturation"/>
                                     <connections>
                                         <action selector="onSaturationChanged:" destination="7Hx-zg-djq" eventType="touchUpInside" id="Qye-Ao-Xab"/>
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N6d-VA-mvq" userLabel="Contrast">
-                                    <rect key="frame" x="120" y="0.0" width="60" height="128"/>
+                                    <rect key="frame" x="120" y="0.0" width="60" height="88"/>
                                     <state key="normal" title="Contrast"/>
                                     <connections>
                                         <action selector="onContrastChanged:" destination="7Hx-zg-djq" eventType="touchUpInside" id="TIb-e7-0Xc"/>
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UYM-Ad-V8n">
-                                    <rect key="frame" x="180" y="0.0" width="60" height="128"/>
+                                    <rect key="frame" x="180" y="0.0" width="60" height="88"/>
                                     <state key="normal" title="EdgeDetection"/>
                                     <connections>
                                         <action selector="onEdgeDetection:" destination="7Hx-zg-djq" eventType="touchUpInside" id="Sks-g7-fpj"/>
@@ -124,12 +130,17 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="TFP-7E-ncG" secondAttribute="bottom" id="0wG-BV-KB2"/>
+                        <constraint firstAttribute="trailing" secondItem="PSE-Xr-vbQ" secondAttribute="trailing" id="IyM-oM-nNk"/>
                         <constraint firstItem="TFP-7E-ncG" firstAttribute="leading" secondItem="7Hx-zg-djq" secondAttribute="leading" id="LP3-cD-Q2I"/>
+                        <constraint firstItem="TFP-7E-ncG" firstAttribute="top" secondItem="PSE-Xr-vbQ" secondAttribute="bottom" id="Laj-Gr-j58"/>
                         <constraint firstAttribute="trailing" secondItem="TFP-7E-ncG" secondAttribute="trailing" id="Xd1-th-ujr"/>
-                        <constraint firstItem="TFP-7E-ncG" firstAttribute="top" secondItem="7Hx-zg-djq" secondAttribute="top" id="sRr-ML-7NP"/>
+                        <constraint firstItem="PSE-Xr-vbQ" firstAttribute="top" secondItem="7Hx-zg-djq" secondAttribute="top" constant="10" id="aW0-rv-xhf"/>
+                        <constraint firstItem="PSE-Xr-vbQ" firstAttribute="leading" secondItem="7Hx-zg-djq" secondAttribute="leading" id="eQx-gS-f93"/>
                     </constraints>
                     <connections>
                         <outlet property="imageView" destination="ete-Eb-Wqd" id="FUD-Qc-363"/>
+                        <outlet property="propertiesSlider" destination="PSE-Xr-vbQ" id="EkT-mO-RhB"/>
+                        <outlet property="viewController" destination="BYZ-38-t0r" id="v4F-uB-3uO"/>
                     </connections>
                 </view>
             </objects>
